--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Andrew-McCall/QAExpressDemo/issues"
   },
-  "homepage": "https://github.com/Andrew-McCall/QAExpressDemo#readme"
+  "homepage": "https://github.com/Andrew-McCall/QAExpressDemo#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
