--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha tests",
+    "coverage":"nyc npm test"
   },
   "repository": {
     "type": "git",
@@ -18,8 +20,12 @@
   "homepage": "https://github.com/Andrew-McCall/QAExpressDemo#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2"
+    "mocha": "^10.0.0",
+    "mongoose": "^6.5.2",
+    "nyc": "^15.1.0"
   }
 }
